--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       src="https://kit.fontawesome.com/dcf3890342.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main id="app">
@@ -26,7 +32,7 @@
         <div class="app__container-clock__info-clock">
           <!-- Alarm -->
           <div class="app__container-clock__info-clock__alarm">
-            <p>Alarm <i class="fas fa-bell"></i></p>
+            <p>Alarme <i class="fas fa-bell"></i></p>
 
             <h4 class="app__container-clock__info-clock__alarm--title">
               06:00
