Button set alarm

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             />
           </label>
         </form>
-        <button class="bnt-set">Set</button>
+        <button class="btn-set">Set</button>
         <button class="btn-close-model">&times;</button>
       </div>
     </main>
